--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										Alice is an adventurous person who always challenges herself. As a student, she knows that students learn the best through experiential learning. Hence, she is interested in the education field after graduation. She is currently looking for a position to contribute her knowledge to society.
+										I am an adventurous person who always challenges myself. As a student, she knows that students learn the best through experiential learning. In the past, I learned under cramming education. Therefore, I would like to make learning fun via the help of STEM tools. To achieve the goal, I would like to enter the education field after graduation. I am currently looking for a full-time position to contribute my knowledge to the society. 
 									</div>
 								</div>
 							</div>
@@ -187,7 +187,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-1">
 								<span class="icon">
-									<i class="icon-bulb"></i>
+									<i class="icon-group"></i>
 								</span>
 								<div class="desc">
 									<h3>Collaboration</h3>
@@ -198,7 +198,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-2">
 								<span class="icon">
-									<i class="icon-data"></i>
+									<i class="icon-puzzle"></i>
 								</span>
 								<div class="desc">
 									<h3>Problem Solving</h3>
@@ -209,7 +209,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-3">
 								<span class="icon">
-									<i class="icon-phone3"></i>
+									<i class="icon-calculator"></i>
 								</span>
 								<div class="desc">
 									<h3>Math & Science Skills</h3>
@@ -220,7 +220,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-4">
 								<span class="icon">
-									<i class="icon-layers2"></i>
+									<i class="icon-pencil"></i>
 								</span>
 								<div class="desc">
 									<h3>Design Thinking</h3>
@@ -231,22 +231,22 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-5">
 								<span class="icon">
-									<i class="icon-data"></i>
+									<i class="icon-bulb"></i>
 								</span>
 								<div class="desc">
 									<h3>Critical Thinking</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>Students can learn critical thinking under their STEM project </p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-6">
 								<span class="icon">
-									<i class="icon-phone3"></i>
+									<i class="icon-sort-numerically"></i>
 								</span>
 								<div class="desc">
 									<h3>Inquiry Skills</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>I believe students are the drivers of the STEM learning process</p>
 								</div>
 							</div>
 						</div>
