--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="about">About</a></li>
-						<li><a href="#" data-nav-section="services">Services</a></li>
+						<li><a href="#" data-nav-section="services">STEM</a></li>
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
@@ -138,7 +138,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										I am an adventurous person who always challenges myself. As a student, she knows that students learn the best through experiential learning. In the past, I learned under cramming education. Therefore, I would like to make learning fun via the help of STEM tools. To achieve the goal, I would like to enter the education field after graduation. I am currently looking for a full-time position to contribute my knowledge to the society. 
+										I am an adventurous person who always challenges myself. As a student, I know that students learn the best through experiential learning. In the past, I learned under cramming education. Therefore, I would like to make learning fun via the help of STEM tools. To achieve the goal, I would like to enter the education field after graduation. I am currently looking for a full-time position to contribute my knowledge to the society. 
 									</div>
 								</div>
 							</div>
@@ -146,25 +146,25 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
-										<h3>Graphic Design</h3>
+										<h3>STEM Education</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<div class="services color-2">
-										<span class="icon2"><i class="icon-globe-outline"></i></span>
-										<h3>Web Design</h3>
+										<span class="icon2"><i class="icon-signal"></i></span>
+										<h3>Robotics</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
 									<div class="services color-3">
-										<span class="icon2"><i class="icon-data"></i></span>
-										<h3>Software</h3>
+										<span class="icon2"><i class="icon-code"></i></span>
+										<h3>Coding</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
 									<div class="services color-4">
-										<span class="icon2"><i class="icon-phone3"></i></span>
-										<h3>Application</h3>
+										<span class="icon2"><i class="icon-pipette"></i></span>
+										<h3>Biological Science</h3>
 									</div>
 								</div>
 							</div>
@@ -213,7 +213,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								</span>
 								<div class="desc">
 									<h3>Math & Science Skills</h3>
-									<p>Math & Science skills are essential for tackling the STEM-related questions</p>
+									<p>Math & Science skills are essential for tackling the STEM questions</p>
 								</div>
 							</div>
 						</div>
@@ -224,7 +224,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								</span>
 								<div class="desc">
 									<h3>Design Thinking</h3>
-									<p>I believe it is a direct way for the students to know how STEM is linked to daily life</p>
+									<p>Allow students to know how STEM is linked to daily life</p>
 								</div>
 							</div>
 						</div>
@@ -242,7 +242,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-6">
 								<span class="icon">
-									<i class="icon-sort-numerically"></i>
+									<i class="icon-hangouts"></i>
 								</span>
 								<div class="desc">
 									<h3>Inquiry Skills</h3>
@@ -371,7 +371,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>Gigo Green Mech</h3>
+								<h3>Gigo GreenMech</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="20"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:20%">
@@ -557,61 +557,61 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-1.jpg);">
+							<div class="project" style="background-image: url(images/scratchGame.jpeg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 01</a></h3>
-										<span>Website</span>
+										<h3>Work 01</Work></h3>
+										<span>Music Game</span>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-2.jpg);">
+							<div class="project" style="background-image: url(images/radarCar.jpeg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 02</a></h3>
-										<span>Animation</span>
+										<h3>Work 02</h3>
+										<span>Donkey Car</span>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/img-3.jpg);">
+							<div class="project" style="background-image: url(images/coding.jpeg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 03</a></h3>
-										<span>Illustration</span>
+										<h3>Work 03</h3>
+										<span>EV3 lesson</span>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
-							<div class="project" style="background-image: url(images/img-4.jpg);">
+							<div class="project" style="background-image: url(images/microBitCar.jpeg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 04</a></h3>
-										<span>Application</span>
+										<h3>Work 04</h3>
+										<span>EV3 Lesson</span>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-5.jpg);">
+							<div class="project" style="background-image: url(images/cupCar.jpeg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 05</a></h3>
-										<span>Graphic, Logo</span>
+										<h3>Work 05</h3>
+										<span>Pull Back Car Lesson</span>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-6.jpg);">
+							<div class="project" style="background-image: url(images/greenMech.jpeg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 06</a></h3>
-										<span>Web Design</span>
+										<h3>Work 06</h3>
+										<span>Gigo GreenMech</span>
 
 									</div>
 								</div>
