--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="col-md-3 text-center animate-box">
 							<span class="colorlib-counter js-counter" data-from="0" data-to="2" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Experience</span>
+							<span class="colorlib-counter-label">Experience (Year)</span>
 						</div>
 					</div>
 				</div>
@@ -480,7 +480,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">STEM Tutor at Pigeon City </a> <span>Feb 2019 - Present</span></h2>
+					                  <h2>STEM Tutor at Pigeon City<span>Feb 2019 - Present</span></h2>
 					                  <p>I am a STEM tutor, who teach a class of 15 primary 1 to 6 students. The extracurricular activity class mainly teach the students robotics and coding using EV3 and NXT.</p>
 					               </div>
 					            </div>
@@ -493,7 +493,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Internship at HKFYG Centre for Creative Science and Technology</a> <span>July 2019 - Aug 2019</span></h2>
+					               	<h2>Internship at HKFYG Centre for Creative Science and Technology<span>July 2019 - Aug 2019</span></h2>
 					                  <p>During the internship period, my main job duty was assisting a class of 20 secondary students, mainly helped with the AI course using Raspberry Pi, Arduino, Micro:bit. Moreover, I developed a 45 minutes course, with teaching material, for form 1 to 3 students. I also wrote Instagram posts for science popularization. </p>
 					               </div>
 					            </div>
@@ -505,7 +505,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Biology Tutor at Pui Tak Canossian College</a> <span>Dec 2018 - Apr 2019</span></h2>
+					               	<h2>Biology Tutor at Pui Tak Canossian College<span>Dec 2018 - Apr 2019</span></h2>
 					                  <p>I was a biology tutor, who taught a class of 10 secondary 6 students. I prepared teaching materials and designed quiz for them.</p>
 					               </div>
 					            </div>
@@ -517,7 +517,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Internship at Children’s Discovery Museum</a> <span>Oct 2018 - Jan 2019</span></h2>
+					               	<h2>Internship at Children’s Discovery Museum<span>Oct 2018 - Jan 2019</span></h2>
 					                  <p>I was an internship in Hong Kong Children’s Discovery Museum, who believe in child-led learning through play. During the internship period, I mainly provided guest services and facilitated educational programs and drop-in workshops, such as teaching topography using augmented reality(AR) sandbox.</p>
 					               </div>
 					            </div>
@@ -529,7 +529,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Homework Tutor at Selin</a> <span>Jan 2018 - Aug 2018</span></h2>
+					               	<h2>Homework Tutor at Selin<span>Jan 2018 - Aug 2018</span></h2>
 					                  <p>I was a homework tutor, who taught a class of 12 primary 1 to 6 students. I prepared teaching materials to cater to their learning needs.</p>
 					               </div>
 					            </div>
@@ -581,7 +581,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="desc">
 									<div class="con">
 										<h3>Work 03</h3>
-										<span>EV3 lesson</span>
+										<span>EV3 Lesson</span>
 									</div>
 								</div>
 							</div>
